--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">CollectConnect</string>
+    <string name="privacy_policy">
+        <![CDATA[
+        <서비스 이용약관>\n
+        제 1장 총칙\n\n
+        제 1조 (목적)\n\n
+        본 약관은 서비스(이하 "회사"라 한다)는 홈페이지에서 제공하는 서비스(이하 "서비스"라 한다)를 제공함에 있어 회사와 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.\n\n
+        제 2조 (용어의 정의)\n\n
+        1. 본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
+        \'서비스\'란 회사가 이용자에게 서비스를 제공하기 위하여 컴퓨터 등 정보통신설비를 이용하여 구성한 가상의 공간을 의미하며, 서비스 자체를 의미하기도 합니다.\n
+        \'회원(이하 \"회원\"이라 한다)\'이란 개인정보를 제공하여 회원등록을 한 자로서 홈페이지의 정보를 지속적으로 제공받으며 홈페이지가 제공하는 서비스를 계속적으로 이용할 수 있는 자를 말합니다.\n
+        \'아이디(이하 \"ID\"라 한다)\'란 회원의 식별과 회원의 서비스 이용을 위하여 회원이 선정하고 회사가 승인하는 회원 고유의 계정 정보를 의미합니다.\n
+        \'비밀번호\'란 회원이 부여 받은 ID와 일치된 회원임을 확인하고,
+        ]]>
+    </string>
 </resources>
